--- a/components/BurgerMenu/BurgerMenu.module.css
+++ b/components/BurgerMenu/BurgerMenu.module.css
@@ -85,3 +85,10 @@
   font-size: 20px;
   color: var(--white);
 }
+
+.illustration {
+  margin: auto -20px -20px;
+  width: calc(100% + 40px);
+  max-width: none;
+  height: auto;
+}
